_src/_includes/_assets/css/core.css
/* ... */
pre {
  font-family: monospace;
  border-radius: 6px;
  padding: 16px;
  overflow-wrap: anywhere;
  overflow-x: scroll;
}

pre code {
  background: none;
  border: none;
  padding: 0;
}

.banner {
  background: var(--orange);
  padding: 10px;
  border-radius: 5px;
  color: var(--bright);
}

#af_group {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-gap: 30px;
  /*padding-top: 30px;*/
}

#af_group_split {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 30px;
  /*padding-top: 30px;*/
}

#af_img img {
  margin: 0 auto;
}

table {
  border-collapse: collapse;
  width: 100%;
  margin-bottom: 20px;
}

thead {
  background-color: #333;
  color: #fff;
}

th,
td {
  text-align: left;
  padding: 8px;
  border-bottom: 1px solid #ddd;
}

.button {
  /* background-color: var(--brand-background); */
  border: 4px solid var(--orange);
  border-radius: 5px;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-block;
  padding: 10px 15px;
  text-align: center;
  text-decoration: none;
  touch-action: manipulation;
  background-color: var(--orange);
  color: var(--bright);
}

.button-small {
  padding: 4px 8px;
}

::-webkit-input-placeholder { color: #dbdbdb; }
::-moz-placeholder { color: #dbdbdb; }
::placeholder { color: #dbdbdb; }

.extra-bold {
  font-weight: 900!important;
}

.regular {
  font-weight: 400;
}

.light {
  font-weight: 300;
}

.no-padding {
  padding: 0!important;
}

button {
  font-weight: 300;
  font-family: 'Open Sans', sans-serif;
  box-shadow: #00000016 0px 3px 8px;
  transition: all 0.2s ease;
  border: 0;
}

#darktoggle, #corner_search, #corner_menu {
  justify-self: center;
  padding: 10px;
}

#corner_menu, #menu_modal {
  display: none;
}

#bayton_logo {
  justify-self: start;
}

#bayton_logo :is(img, object, svg) {
  width: 170px;
}

#platinum_logo {
  padding: 20px 0 0;
}

#platinum_logo img {
  width: 30px;
  margin: 0 auto;
}

.home-background {
  background: radial-gradient(circle, rgba(0,59,89,1) 0%, rgba(0,119,179,1) 50%, rgba(0,206,250,1) 87%, rgb(0, 213, 255) 100%);
  color: #FFFFFF;
}

#navbar {
  display: grid;
  padding: 15px 20px 15px;
  grid-template-columns: 180px 40px 5fr 60px 60px;
  align-items: center;
  height: 100px;
  /* max-width: 1200px; */
  margin: 0 auto;
}

nav #nav_links {
  padding-top: 5px;
  font-size: 16px;
  padding-right: 20px;
  justify-self: end;
  grid-column-start: 3;
}

#nav_links a {
  text-decoration: none;
  transition: none;
  padding-left: 20px;
  border-bottom: none;
}

.nav-link-individual {
  display: inline;
}

content {
  padding: 30px 40px 0;
  max-width: 1200px;
  margin: 0 auto;
  display: block;
  overflow-wrap: break-word;
}

content#home {
  display: grid;
  max-width: 100%;
  padding: 0;
}

.intro_wrapper{
  display: grid;
  grid-template-columns: 1fr;
  padding: 0 0 100px;
  color: var(--bright);
}

/* Logo ticker */

.ticker {
  display: grid;
  grid-auto-flow: column;
  align-items: center;
  justify-content: center;
  grid-gap: 30px;
  white-space: nowrap;
}

@keyframes ticker {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(-100%);
  }
}

#vendor_logo_container_scroll {
  margin: 0 -40px;
  padding-top: 10px;
}

.img-ticker {
  animation: ticker 160s linear infinite;
}

.ticker-item img {
  border-radius: 0;
  max-width: unset;
  display: inline-block;
}

/* End ticker */


#highlight_container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 100px 100px;
  padding-top: 50px;
}

.highlight-section h2 {
  margin: 0;
}

.highlight-section {
  border: 4px solid var(--orange);
  padding: 20px;
  border-radius: 5px;
}

.highlight-offside {
  border: none;
  align-self: center;
  font-size: 18px;
}

.highlight-offside-heading {
  font-weight: bold;
  padding-bottom: 15px;
}

.highlight-section > .post-block {
  padding: 10px 0;
}

.highlight-section > .post-block > .post-body {
  border-left: 4px solid var(--main-blue);
  padding-left: 10px
}

.highlight-section > .post-block > .post-body > .post-meta {
  font-size: 16px;
  padding: 0 0 5px;
}

.highlight-section > .post-block > .post-body > .post-title {
  font-size: 18px;
}

.highlight-section > .post-block > .post-body > .post-title a {
  text-decoration: none;
}

#what_i_do_community {
  grid-column: 2/3;
  grid-row: 2/3;
}

#community_offside {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-items: center;
}

.community-icons {
  display: grid;
  align-items: end;
  justify-items: center;
  grid-template-rows: 1fr 1fr;
  grid-gap: 10px;
}

.community-heading {
  text-align: center;
}

#what_i_do_consultancy {
  grid-column: 1/2;
  grid-row: 3/4;
}
#what_i_do_validation {
  grid-column: 2/3;
  grid-row: 4/5;
}

.post-body-notes {
  font-size: 18px;
}

.post-body-notes .post-meta {
  padding: 0;
  color: var(--blood-orange);
}

content#doc {
  display: grid;
  grid-template-columns: 1.4fr 4fr;
  padding-top: 60px;
  grid-gap: 30px;
}

content#page, content#search, content#archive {
  display: grid;
  grid-template-columns: 1fr;
  padding-top: 60px;
}

#banner_statement {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-content: center;
  font-size: 16px;
  color: #7a7a7a;
}

.banner-statement-individual {
  text-align: center;
}

#Jason_Bayton img {
  width: 500px;
  height: 288px;
}

#intro_block {
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-column-gap: 20px;
}

#intro_heading {
  font-weight: 400;
  font-size: 70px;
}

.home-heading {
  font-weight: 400;
  font-size: 55px;
}

#intro_subheading, .home-subheading {
  font-size: 26px;
}

.partner-heading {
  text-align: center;
}

#intro_cta {
  justify-self: center;
}

#intro_heading p, .home-heading p {
  margin: 0;
}

#intro_text {
grid-column: 1/-1;
}

#intro_android {
  text-align: center;
  font-size: 24px;
  padding: 10px;
}

.cta {
  padding-top: 15px;
}

#android_head {
  margin: 0 auto;
  /* padding-top: 20px; */
  align-self: center;
}
/* ... */

